--- a/cartesi/package.json
+++ b/cartesi/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "TypeScript DApp",
   "dependencies": {
+    "cartesi-router": "^1.0.4",
+    "cartesi-wallet": "^1.0.5",
     "openapi-fetch": "^0.7",
     "viem": "^1"
   },
