feature: Adiciona chamadas para contrato de saque

--- a/cartesi/Dockerfile
+++ b/cartesi/Dockerfile
@@ -39,6 +39,7 @@ COPY --from=build-stage /opt/cartesi/dapp/dist .
 
 ENV ROLLUP_HTTP_SERVER_URL="http://127.0.0.1:5004"
 ENV ETHER_PORTAL_ADDRESS="0xFfdbe43d4c855BF7e0f105c400A50857f53AB044"
+ENV DAPP_ADDRESS_RELAY_CONTRACT="0xF5DE34d6BbC0446E2a45719E718efEbaaE179daE"
 
 ENTRYPOINT ["rollup-init"]
 CMD ["node", "index.js"]
